--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ distlib==0.3.1
 dj-database-url==0.5.0
 Django==3.0
 django-ckeditor==5.9.0
-django-email-verification==0.0.6
+#django-email-verification==0.0.6
 django-js-asset==1.2.2
 django-phone-verify==2.0.0
 django-phonenumber-field==4.0.0
